--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -44,3 +44,26 @@ polish = Polish
 portuguese = Portuguese
 russian = Russian
 spanish = Spanish
+
+# Disconnect Reasons
+none = None
+game_full = Game Full
+game_started = Game Started
+game_not_found = Game Not Found
+legacy_custom = Custom (Legacy)
+outdated_client = Outdated Client
+banned_from_room = Banned From Room        
+kicked_from_room = Kicked From Room
+custom = Custom
+invalid_username = Invalid Username
+hacking = Hacking
+force_no_reason = Force Disconnect (No Reason)        
+bad_connection = Bad Connection
+game_not_found_two = Game Not Found (Type 2)
+server_closed = Server Closed
+room_closed = Room Closed
+server_overloaded = Server Overloaded
+
+# Lobby Settings
+public_game = Public Game
+private_game = Private Game
