Added Table Generator For Helping Debug Packets

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -67,3 +67,7 @@ server_overloaded = Server Overloaded
 # Lobby Settings
 public_game = Public Game
 private_game = Private Game
+
+# Debug
+positions_header = Positions
+bytes_header = Bytes
