Saving Current Work. Added Beginning of Region File Generator

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -1,7 +1,12 @@
 # suppress inspection "TrailingSpacesInProperty" for whole file
 
 # Commands
+command_not_implemented = This command has not been implemented yet!!!
 exit_command = exit
+region_file_generator_command = region
+region_file_generator_command_default_display_name = Crewmate
+region_file_generator_command_unknown_host = Unknown Host: %s
+region_file_generator_command_failed_create_file = Failed to Create: %s
 
 # Server Startup/Shutdown
 server_shutdown = Shutting Down Server!!!
