Saving Current Work. Thinking of Ideas To Handle Logging To Terminal

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -12,6 +12,7 @@ region_file_generator_command_failed_create_file = Failed to Create: %s
 server_shutdown = Shutting Down Server!!!
 server_started = Started Server!!!
 server_starting = Starting Server!!!
+server_listening_title = Listening on %s:%d!!!
 
 # Exceptions
 failed_socket_bind = Failed To Bind To Socket!!!
