--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -13,6 +13,13 @@ server_shutdown = Shutting Down Server!!!
 server_started = Started Server!!!
 server_starting = Starting Server!!!
 server_listening_title = Listening on %s:%d!!!
+log_datetime_format_12_hour = [${month}/${day}/${year} ${hour}:${minute}:${second}:${nanosecond} ${meridiem} ${timezone}] 
+log_datetime_format_24_hour = [${month}/${day}/${year} ${hour}:${minute}:${second}:${nanosecond} ${timezone}] 
+log_datetime_format_12_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second} ${meridiem}] 
+log_datetime_format_24_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second}] 
+
+log_datetime_pre_meridiem = AM
+log_datetime_post_meridiem = PM
 
 # Exceptions
 failed_socket_bind = Failed To Bind To Socket!!!
