Beginning of Help Command

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -1,12 +1,19 @@
 # suppress inspection "TrailingSpacesInProperty" for whole file
 
 # Commands
-command_not_implemented = This command has not been implemented yet!!!
 exit_command = exit
 region_file_generator_command = region
 region_file_generator_command_default_display_name = Crewmate
 region_file_generator_command_unknown_host = Unknown Host: %s
 region_file_generator_command_failed_create_file = Failed to Create: %s
+region_file_generator_command_success_create_file = Created File at: %s
+help_command = help
+help_command_format = %s - %s
+
+# Help Description Commands
+exit_command_help = Shuts Down the Server!!!
+region_file_generator_command_help = Generates Region File in Current Working Directory (%s)!!!
+help_command_help = Displays This Output
 
 # Server Startup/Shutdown
 server_shutdown = Shutting Down Server!!!
