--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -35,8 +35,10 @@ gamecode_invalid_length_exception = Game Code Bytes Needs To Be 4 Bytes Long!!!
 gamecode_invalid_code_exception = Invalid Game Code!!!
 gamecode_server_side_error_exception = Server side error with reading game code!!!
 gamecode_exception = Game Code Exception: 
+search_unknown_host = Server Side Exception While Searching For Games!!!
 
 # Server Logging
+client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
 name_logged = Name: %s
 encoded_port_logged = Encoded Port: %s
 max_player_logged = Max Players: %s
