Started Work on Cosmetic Setting

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -20,11 +20,14 @@ server_shutdown = Shutting Down Server!!!
 server_started = Started Server!!!
 server_starting = Starting Server!!!
 server_listening_title = Listening on %s:%d!!!
+
+# DateTime
 log_datetime_format_12_hour = [${month}/${day}/${year} ${hour}:${minute}:${second}:${nanosecond} ${meridiem} ${timezone}] 
 log_datetime_format_24_hour = [${month}/${day}/${year} ${hour}:${minute}:${second}:${nanosecond} ${timezone}] 
 log_datetime_format_12_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second} ${meridiem}] 
-log_datetime_format_24_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second}] 
+log_datetime_format_24_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second}]
 
+# Meridiem
 log_datetime_pre_meridiem = AM
 log_datetime_post_meridiem = PM
 
@@ -92,3 +95,10 @@ private_game = Private Game
 # Debug
 positions_header = Positions
 bytes_header = Bytes
+fragment_packet = Fragment Packet: 
+unreliable_packet = Unreliable Packet: 
+cosmetic_packet = Set Cosmetic: 
+color_packet = Set Color: %s
+hat_packet = Set Hat: %s
+pet_packet = Set Pet: %s
+skin_packet = Set Skin: %s
