Set Cosmetic Enums

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -102,3 +102,144 @@ color_packet = Set Color: %s
 hat_packet = Set Hat: %s
 pet_packet = Set Pet: %s
 skin_packet = Set Skin: %s
+
+# Color Enum
+color_red = Red
+color_blue = Blue
+color_dark_green = Green
+color_pink = Pink
+color_orange = Orange
+color_yellow = Yellow
+color_dark_gray = Gray
+color_white = White
+color_purple = Purple
+color_brown = Brown
+color_cyan = Cyan
+color_light_green = Light Green
+
+# Skin Enum
+skin_none = None
+skin_astronaut = Astronaut
+skin_captain = Captain
+skin_mechanic = Mechanic
+skin_military = Military
+skin_police = Police
+skin_scientist = Scientist
+skin_suit_black = Black Suit
+skin_suit_white = White Suit
+skin_the_wall = The Wall
+skin_hazmat = Hazmat
+skin_security = Security
+skin_tarmac = Tarmac
+skin_miner = Miner
+skin_winter = Winter
+skin_archaeologist = Archaeologist
+
+# Pet Enum
+pet_none = None
+pet_alien = Alien
+pet_crewmate = Crewmate
+pet_dog = Dog
+pet_stickmin = Stickmin
+pet_hamster = Hamster
+pet_robot = Robot
+pet_ufo = UFO
+pet_ellie = Ellie
+pet_squig = Squig
+pet_bedcrab = Bedcrab
+
+# Hat Enum
+hat_none = None
+hat_astronaut = Astronaut
+hat_baseball_cap = Baseball Cap
+hat_brain_slug = Brain Slug
+hat_bush = Bush
+hat_captain = Captain
+hat_double_top_hat = Double Top Hat
+hat_flowerpot = Flowerpot
+hat_goggles = Goggles
+hat_hard_hat = Construction
+hat_military = Military
+hat_paper = Paper
+hat_party_stripe = Party Striped
+hat_police = Police
+hat_stethoscope = Stethoscope
+hat_top_hat = Top Hat
+hat_towel = Towel Wizard
+hat_ushanka = Ushanka
+hat_viking = Viking
+hat_wall_guard = The Wall Guard
+hat_snowman = Snowman
+hat_antlers = Antlers
+hat_xmas_lights = Xmas Lights
+hat_santa = Santa
+hat_xmas_tree = Xmas Tree
+hat_gift = Present
+hat_candy_canes = Candy Canes
+hat_elf_hat = Elf Hat
+hat_2019_party = 2019 Party
+hat_white = White
+hat_crown = Crown
+hat_eyebrows = Eyebrows
+hat_angel_halo = Halo
+hat_elf_cap = Elf Cap
+hat_flat_cap = Flat Cap
+hat_plunger = Plunger
+hat_snorkel = Snorkel
+hat_stickmin = Stickmin
+hat_straw = Straw
+hat_sheriff = Sheriff
+hat_eyeball_lamp = Eyeball Lamp
+hat_toilet_paper = Toilet Paper
+hat_toppat_clan_leader = Toppat Clan Leader
+hat_black_fedora = Black Fedora
+hat_ski_goggles = Ski Goggles
+hat_landing_headset = Landing Headset
+hat_mira_hazmat = Mira Hazmat Mask
+hat_medical_mask = Medical Mask
+hat_mira_security_mask = Mira Security Mask
+hat_safari = Safari
+hat_banana = Banana
+hat_beanie = Beanie
+hat_bear_ears = Bear Ears
+hat_cheese = Cheese
+hat_cherry = Cherry
+hat_egg = Egg
+hat_green_fedora = Green Fedora
+hat_flamingo = Flamingo
+hat_flower = Flower
+hat_knight_helmet = Knight Helmet
+hat_plant = Plant
+hat_cat_head = Cat Head
+hat_bat_wings = Bat Wings
+hat_devil_horns = Devil Horns
+hat_mohawk = Mohawk
+hat_pumpkin = Pumpkin
+hat_spooky_paper_bag = Spooky Paper Bag
+hat_witch = Witch
+hat_wolf_ears = Wolf Ears
+hat_pirate = Pirate
+hat_plague_doctor = Plague Doctor
+hat_knife = Knife
+hat_hockey_mask = Hockey Mask
+hat_miner_gear = Miner Gear
+hat_winter_gear = Winter Gear
+hat_archaeologist = Archaeologist
+hat_antenna = Antenna
+hat_balloon = Balloon
+hat_bird_nest = Bird Nest
+hat_bandanna_black = Black Bandanna
+hat_caution_sign = Caution Sign
+hat_chef = Chef
+hat_ccc = CCC
+hat_do_rag = Do-rag
+hat_dum_sticky_note = Dum Sticky Note
+hat_fez = Fez
+hat_military_general = General Hat
+hat_pompadour = Pompadour
+hat_hunter = Hunter
+hat_military_helmet = Military Helmet
+hat_crewmate = Mini Crewmate
+hat_ninja_mask = Ninja Mask
+hat_ram_horns = Ram Horns
+hat_snow_crewmate = Snow Crewmate
