--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -2,6 +2,11 @@
 
 # Commands
 exit_command = exit
+bug_command = bug
+bug_command_issue_message = Report bugs at %s
+test_lua_command = testlua
+test_lua_greeting_exploit = Test' print 'Hello World!!!
+test_lua_greeting = Hello World!!!
 region_file_generator_command = region
 region_file_generator_command_default_display_name = Crewmate
 region_file_generator_command_unknown_host = Unknown Host: %s
@@ -12,6 +17,8 @@ help_command_format = %s - %s
 
 # Help Description Commands
 exit_command_help = Shuts Down the Server!!!
+bug_command_help = Prints out the issue report link!!!
+test_lua_command_help = Prints Hello World As Interpreted By LuaJ!!!
 region_file_generator_command_help = Generates Region File in Current Working Directory (%s)!!!
 help_command_help = Displays This Output
 
