Compiling Version Info Into Jar

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -23,6 +23,8 @@ region_file_generator_command_help = Generates Region File in Current Working Di
 help_command_help = Displays This Output
 
 # Server Startup/Shutdown
+server_name = Crewmate
+server_version = %s v%s
 server_shutdown = Shutting Down Server!!!
 server_started = Started Server!!!
 server_starting = Starting Server!!!
