Currently Working on Proper Parsing of Reliable Packets

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -48,6 +48,7 @@ gamecode_invalid_code_exception = Invalid Game Code!!!
 gamecode_server_side_error_exception = Server side error with reading game code!!!
 gamecode_exception = Game Code Exception: 
 search_unknown_host = Server Side Exception While Searching For Games!!!
+reliable_packet_invalid_size = Reliable Packet Invalid Size
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -61,6 +62,7 @@ imposter_count_any_logged = Any
 language_logged = Language: %s
 gamecode_integer_form_logged = Game Code (Integer Form): %s
 list_delimiter_logged = , 
+owned_maps = Owned Maps: %s
 
 # Maps
 skeld = The Skeld
