Saving Current Work. Battery About to Die. Can Interpret Chat Messages Now (Except 1 Byte Which I Believe Is Player ID)

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -63,6 +63,7 @@ language_logged = Language: %s
 gamecode_integer_form_logged = Game Code (Integer Form): %s
 list_delimiter_logged = , 
 owned_maps = Owned Maps: %s
+received_chat = Received Chat From Player "%s": %s
 
 # Maps
 skeld = The Skeld
