Added More Translations

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -255,3 +255,58 @@ hat_crewmate = Mini Crewmate
 hat_ninja_mask = Ninja Mask
 hat_ram_horns = Ram Horns
 hat_snow_crewmate = Snow Crewmate
+
+# RPC
+rpc_animation = Animation
+rpc_complete_task = Complete Task
+rpc_sync_settings = Sync Settings
+rpc_set_infected = Set Infected (Imposter)
+rpc_exiled = Exiled (Voted Off)
+rpc_check_name = Check Name
+rpc_set_name = Set Name
+rpc_check_color = Check Color
+rpc_set_color = Set Color
+rpc_set_hat = Set Hat
+rpc_set_skin = Set Skin
+rpc_report_dead_body = Report Body
+rpc_murder_player = Murder Player
+rpc_send_chat = Send Chat
+rpc_start_meeting = Start Meeting
+rpc_set_scanner = Set Scanner (Medbay?)
+rpc_send_chat_note = Send Chat Note (Vote Notification)
+rpc_set_pet = Set Pet
+rpc_set_start_counter = Set Start Counter (Kill Cooldown Or Emergency Button Cooldown?)
+rpc_enter_vent = Enter Vent
+rpc_exit_vent = Exit Vent
+rpc_snap_to = Snap To (Teleport)
+rpc_close = Close (Vote State Results to Proceeding)
+rpc_voting_complete = Voting Complete
+rpc_cast_vote = Cast Vote
+rpc_clear_vote = Clear Vote
+rpc_add_vote = Add Vote (???)
+rpc_close_door = Close Door
+rpc_repair_system = Repair System (Task Completion?)
+rpc_set_tasks = Set Tasks
+rpc_update_game_data = Update Game Data
+
+# SendOption
+send_option_none = Unreliable
+send_option_reliable = Reliable
+send_option_hello = Hello
+send_option_disconnect = Disconnect
+send_option_acknowledgment = Acknowledgement
+send_option_fragment = Fragment
+send_option_ping = Ping
+
+# Reliable Packet Type (Among Us Specific)
+reliable_packet_pre_host_settings = Pre-Host Settings
+reliable_packet_join_game = Join Game
+reliable_packet_start_game = Start Game
+reliable_packet_remove_game = Remove Game
+reliable_packet_remove_player = Remove Player
+reliable_packet_game_data = Game Data
+reliable_packet_game_data_to = Game Data To
+reliable_packet_joined_game = Joined Game
+reliable_packet_alter_game = Alter Game
+reliable_packet_redirect_game = Redirect Game
+reliable_packet_search_public_game = Search Public Game
