Saving work as charger is being a pita

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -114,6 +114,9 @@ color_packet = Set Color: %s
 hat_packet = Set Hat: %s
 pet_packet = Set Pet: %s
 skin_packet = Set Skin: %s
+unknown_game_data_byte = Unknown Game Data Byte: %s
+unknown_rpc_flag = Unknown RPC Flag: %s
+rpc_length_vs_packet_length = RPC Specified Length: %s - Packet Length (Subtracting 6 From Header): %s
 
 # Color Enum
 color_red = Red
