Working on Game Code Command

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -1,6 +1,14 @@
 # suppress inspection "TrailingSpacesInProperty" for whole file
 
 # Commands
+gamecode_command = gamecode
+gamecode_bytes_argument = bytes
+gamecode_string_argument = string
+gamecode_invalid_argument_length = You need to specify %s or %s and then the gamecode or the bytes formatted as b5:f0:90:8a!!!
+gamecode_string_invalid_length = Wrong length for the game code bytes. Needs to be formatted as b5:f0:90:8a!!!
+gamecode_string_invalid_format = The game code bytes need to be formatted as b5:f0:90:8a!!!
+gamecode_not_valid = Invalid Game Code!!!
+gamecode_invalid_hex = Hex Number Invalid!!!
 exit_command = exit
 bug_command = bug
 bug_command_issue_message = Report bugs at %s
@@ -16,6 +24,7 @@ help_command = help
 help_command_format = %s - %s
 
 # Help Description Commands
+gamecode_command_help = Convert Game Code (Room Code) to Bytes or String
 exit_command_help = Shuts Down the Server!!!
 bug_command_help = Prints out the issue report link!!!
 test_lua_command_help = Prints Hello World As Interpreted By LuaJ!!!
