Thanks to CodyPhobe, the game code parser for v2 codes works now! :)

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -9,6 +9,7 @@ gamecode_string_invalid_length = Wrong length for the game code bytes. Needs to 
 gamecode_string_invalid_format = The game code bytes need to be formatted as b5:f0:90:8a!!!
 gamecode_not_valid = Invalid Game Code!!!
 gamecode_invalid_hex = Hex Number Invalid!!!
+gamecode_string = Game Code: %s
 exit_command = exit
 bug_command = bug
 bug_command_issue_message = Report bugs at %s
