Sanitization For Game Code

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -55,6 +55,7 @@ failed_socket_bind = Failed To Bind To Socket!!!
 gamecode_null_exception = Check to make sure your assigned your game code variable before passing it to me!!!
 gamecode_invalid_length_exception = Game Code Bytes Needs To Be 4 Bytes Long!!!
 gamecode_invalid_code_exception = Invalid Game Code!!!
+gamecode_invalid_bytes_exception = Malformed Game Code Bytes Were Received!!!
 gamecode_server_side_error_exception = Server side error with reading game code!!!
 gamecode_exception = Game Code Exception: 
 search_unknown_host = Server Side Exception While Searching For Games!!!
