Parsed Alter Game Packets

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -128,6 +128,7 @@ skin_packet = Set Skin: %s
 unknown_game_data_byte = Unknown Game Data Byte: %s
 unknown_rpc_flag = Unknown RPC Flag: %s
 rpc_length_vs_packet_length = RPC Specified Length: %s - Packet Length (Subtracting 6 From Header): %s
+print_key_value = %s - %s
 
 # Color Enum
 color_red = Red
@@ -324,3 +325,6 @@ reliable_packet_joined_game = Joined Game
 reliable_packet_alter_game = Alter Game
 reliable_packet_redirect_game = Redirect Game
 reliable_packet_search_public_game = Search Public Game
+
+# Alter Game Flag Enum
+alter_game_change_privacy = Change Privacy
