Not Sure If Overkill Or Not

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -13,7 +13,7 @@ gamecode_string = Game Code: %s
 exit_command = exit
 bug_command = bug
 bug_command_issue_message = Report bugs at %s
-test_lua_command = testlua
+lua_command = lua
 test_lua_greeting_exploit = Test' print 'Hello World!!!
 test_lua_greeting = Hello World!!!
 region_file_generator_command = region
@@ -23,14 +23,19 @@ region_file_generator_command_failed_create_file = Failed to Create: %s
 region_file_generator_command_success_create_file = Created File at: %s
 help_command = help
 help_command_format = %s - %s
+ssh_command = ssh
+not_implemented = Not Implemented!!!
+ssh_io_exception = Failed to Start SSH!!!
+ssh_password_change_not_supported = Password Change Not Supported!!!
 
 # Help Description Commands
 gamecode_command_help = Convert Game Code (Room Code) to Bytes or String
 exit_command_help = Shuts Down the Server!!!
 bug_command_help = Prints out the issue report link!!!
-test_lua_command_help = Prints Hello World As Interpreted By LuaJ!!!
-region_file_generator_command_help = Generates Region File in Current Working Directory (%s)!!!
+lua_command_help = Prints Hello World As Interpreted By LuaJ!!!
+region_file_generator_command_help = Generates Region File in Current Working Directory Which Is "%s"!!!
 help_command_help = Displays This Output
+ssh_command_help = Test sshd server!!!
 
 # Server Startup/Shutdown
 server_name = Crewmate
