--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -60,11 +60,28 @@ failed_socket_bind = Failed To Bind To Socket!!!
 gamecode_null_exception = Check to make sure your assigned your game code variable before passing it to me!!!
 gamecode_invalid_length_exception = Game Code Bytes Needs To Be 4 Bytes Long!!!
 gamecode_invalid_code_exception = Invalid Game Code!!!
+gamecode_wrong_length = Game Codes Need To Be 4 Or 6 Letters Long!!!
+gamecode_wrong_length_v2 = V2 Game Codes Need To Be 6 Letters Long!!!
 gamecode_invalid_bytes_exception = Malformed Game Code Bytes Were Received!!!
 gamecode_server_side_error_exception = Server side error with reading game code!!!
 gamecode_exception = Game Code Exception: 
 search_unknown_host = Server Side Exception While Searching For Games!!!
+server_side_exception = Server Side Exception!!!
 reliable_packet_invalid_size = Reliable Packet Invalid Size
+reliable_packet_unknown_type = Unknown Reliable Packet Type!!! Unhandled Custom Client? Wrong Version?
+search_request_invalid_size = Search Request Packet Invalid Size
+rpc_packet_unknown_type = Unknown RPC Type!!! Unhandled Custom Client? Wrong Version?
+chat_packet_invalid_size = Chat Packet Invalid Size
+alter_game_packet_invalid_size = Alter Game Packet Invalid Size
+alter_game_packet_unknown_type = Unknown Alter Game Type!!! Unhandled Custom Client? Wrong Version?
+cosmetic_packet_unknown_type = Unknown Cosmetic Packet Type!!! Unhandled Custom Client? Wrong Version?
+cosmetic_packet_invalid_size = Cosmetic Packet Invalid Size!!!
+search_maps_no_selected_maps = No Maps Were Selected!!!
+search_language_unknown_language = Unknown Language!!! Unhandled Custom Client? Wrong Version?
+nonce_wrong_size = Nonce is Wrong Size!!!
+join_game_invalid_size = Join Game Packet Invalid Size!!!
+initial_game_settings_invalid_size = Initial Game Settings Invalid Size!!!
+initial_game_settings_unknown_join_type = Unknown Join Type When Reading Initial Game Settings!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
