Makeshift Plugin Validator

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -24,6 +24,11 @@ region_file_generator_command_success_create_file = Created File at: %s
 help_command = help
 help_command_format = %s - %s
 ssh_command = ssh
+plugin_command = plugin
+plugin_command_invalid_argument_length = You need to specify the full path to the plugin to check.
+plugin_command_success = Plugin is Valid!!!
+plugin_command_fail = Plugin is Invalid!!!
+plugin_command_io_exception = Plugin IOException: %s
 not_implemented = Not Implemented!!!
 ssh_io_exception = Failed to Start SSH!!!
 ssh_password_change_not_supported = Password Change Not Supported!!!
@@ -36,6 +41,7 @@ lua_command_help = Prints Hello World As Interpreted By LuaJ!!!
 region_file_generator_command_help = Generates Region File in Current Working Directory Which Is "%s"!!!
 help_command_help = Displays This Output
 ssh_command_help = Test sshd server!!!
+plugin_command_help = Plugin Info!!!
 
 # Server Startup/Shutdown
 server_name = Crewmate
