--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -108,6 +108,11 @@ received_chat = Received Chat From Player "%s": %s
 skeld = The Skeld
 mira_hq = Mira-HQ
 polus = Polus
+stickmin = Stickmin (Unofficial Name)
+map_five = Map Five (Doesn't Exist At Time of This Translation Writing)
+map_six = Map Six (Doesn't Exist At Time of This Translation Writing)
+map_seven = Map Seven (Doesn't Exist At Time of This Translation Writing)
+map_eight = Map Eight (Doesn't Exist At Time of This Translation Writing)
 unknown = Unknown
 
 # Language
