Please use translations. Also added a Config class as server settings are going to be a lot more complicated than just the port number and max number of players.

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -88,6 +88,9 @@ nonce_wrong_size = Nonce is Wrong Size!!!
 join_game_invalid_size = Join Game Packet Invalid Size!!!
 initial_game_settings_invalid_size = Initial Game Settings Invalid Size!!!
 initial_game_settings_unknown_join_type = Unknown Join Type When Reading Initial Game Settings!!!
+root_directory_failed_creation = Failed to create root directory "%s"!!!
+plugins_directory_failed_creation = Failed to create plugins directory "%s"!!!
+mods_directory_failed_creation = Failed to create mods directory "%s"!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -103,6 +106,16 @@ gamecode_integer_form_logged = Game Code (Integer Form): %s
 list_delimiter_logged = , 
 owned_maps = Owned Maps: %s
 received_chat = Received Chat From Player "%s": %s
+added_game = Added Game: %s
+adding_player = Adding Player: %s
+added_player = Added Player: %s
+removed_player = Removed Player: %s
+
+# Plugins
+registering_plugin = Plugin %s found; Registering plugin!
+registering_plugin_fail = Plugin [%s] could not be loaded!
+plugin_null = Plugin is null!!!
+plugin_id_null = Plugin ID is Missing!!!
 
 # Maps
 skeld = The Skeld
