--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -175,8 +175,10 @@ unknown_game_data_byte = Unknown Game Data Byte: %s
 unknown_rpc_flag = Unknown RPC Flag: %s
 rpc_length_vs_packet_length = RPC Specified Length: %s - Packet Length (Subtracting 6 From Header): %s
 print_key_value = %s - %s
-timing_output = Timing: %s milliseconds
-timing_file_output = Timing "%s": %s milliseconds
+timing_output_singular = Timing: %s millisecond
+timing_file_output_singular = Timing "%s": %s millisecond
+timing_output_plural = Timing: %s milliseconds
+timing_file_output_plural = Timing "%s": %s milliseconds
 
 # Color Enum
 color_red = Red
