Added Example Plugin

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -114,6 +114,8 @@ removed_player = Removed Player: %s
 # Plugins
 registering_plugin = Plugin %s found; Registering plugin!
 registering_plugin_fail = Plugin [%s] could not be loaded!
+registering_plugin_fail_wrong_java = Plugin [%s] could not be loaded due to the plugin being compiled for a newer version of Java than what is being run!
+registering_plugin_fail_unbelievable = Plugin [%s] could not be loaded! Can someone explain to me how we got here?
 plugin_null = Plugin is null!!!
 plugin_id_null = Plugin ID is Missing!!!
 
@@ -176,9 +178,9 @@ unknown_rpc_flag = Unknown RPC Flag: %s
 rpc_length_vs_packet_length = RPC Specified Length: %s - Packet Length (Subtracting 6 From Header): %s
 print_key_value = %s - %s
 timing_output_singular = Timing: %s millisecond
-timing_file_output_singular = Timing "%s": %s millisecond
+timing_file_output_singular = Timing [%s]: %s millisecond
 timing_output_plural = Timing: %s milliseconds
-timing_file_output_plural = Timing "%s": %s milliseconds
+timing_file_output_plural = Timing [%s]: %s milliseconds
 
 # Color Enum
 color_red = Red
