Saving Current Work

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -91,6 +91,7 @@ initial_game_settings_unknown_join_type = Unknown Join Type When Reading Initial
 root_directory_failed_creation = Failed to create root directory "%s"!!!
 plugins_directory_failed_creation = Failed to create plugins directory "%s"!!!
 mods_directory_failed_creation = Failed to create mods directory "%s"!!!
+missing_display_name_handshake = Missing Display Name!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
