Added Another Length Check For Name

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -92,6 +92,7 @@ root_directory_failed_creation = Failed to create root directory "%s"!!!
 plugins_directory_failed_creation = Failed to create plugins directory "%s"!!!
 mods_directory_failed_creation = Failed to create mods directory "%s"!!!
 missing_display_name_handshake = Missing Display Name!!!
+display_name_too_long = Can only use up to 10 letters for your display name. :(
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
