Saving Current Work

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -93,6 +93,8 @@ plugins_directory_failed_creation = Failed to create plugins directory "%s"!!!
 mods_directory_failed_creation = Failed to create mods directory "%s"!!!
 missing_display_name_handshake = Missing Display Name!!!
 display_name_too_long = Can only use up to 10 letters for your display name. :(
+payload_length_too_long = Gotta start somewhere with your custom client. Eh. Well, your payload length is too long.
+invalid_number_of_bytes_exact = The byte[] needs to contain only %d bytes.
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -183,6 +185,7 @@ timing_output_singular = Timing: %s millisecond
 timing_file_output_singular = Timing [%s]: %s millisecond
 timing_output_plural = Timing: %s milliseconds
 timing_file_output_plural = Timing [%s]: %s milliseconds
+nonce_value = Nonce Value: %s
 
 # Color Enum
 color_red = Red
@@ -368,8 +371,8 @@ send_option_fragment = Fragment
 send_option_ping = Ping
 
 # Reliable Packet Type (Among Us Specific)
-reliable_packet_pre_host_settings = Pre-Host Settings
-reliable_packet_join_game = Join Game
+reliable_packet_host_settings = Host Settings
+reliable_packet_join_lobby = Join Lobby
 reliable_packet_start_game = Start Game
 reliable_packet_remove_game = Remove Game
 reliable_packet_remove_player = Remove Player
