Packed Ints Command

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -1,6 +1,7 @@
 # suppress inspection "TrailingSpacesInProperty" for whole file
 
 # Commands
+# GameCode Command
 gamecode_command = gamecode
 gamecode_bytes_argument = bytes
 gamecode_string_argument = string
@@ -10,28 +11,52 @@ gamecode_string_invalid_format = The game code bytes need to be formatted as b5:
 gamecode_not_valid = Invalid Game Code!!!
 gamecode_invalid_hex = Hex Number Invalid!!!
 gamecode_string = Game Code: %s
+
+# Exit Command
 exit_command = exit
+
+# Bug Command
 bug_command = bug
 bug_command_issue_message = Report bugs at %s
+
+# Lua Command
 lua_command = lua
 test_lua_greeting_exploit = Test' print 'Hello World!!!
 test_lua_greeting = Hello World!!!
+
+# Region File Command
 region_file_generator_command = region
 region_file_generator_command_default_display_name = Crewmate
 region_file_generator_command_unknown_host = Unknown Host: %s
 region_file_generator_command_failed_create_file = Failed to Create: %s
 region_file_generator_command_success_create_file = Created File at: %s
+
+# Help Command
 help_command = help
 help_command_format = %s - %s
-ssh_command = ssh
+
+# Plugin Command
 plugin_command = plugin
 plugin_command_invalid_argument_length = You need to specify the full path to the plugin to check.
 plugin_command_success = Plugin is Valid!!!
 plugin_command_fail = Plugin is Invalid!!!
 plugin_command_io_exception = Plugin IOException: %s
-not_implemented = Not Implemented!!!
+
+# SSH Command
+ssh_command = ssh
 ssh_io_exception = Failed to Start SSH!!!
 ssh_password_change_not_supported = Password Change Not Supported!!!
+not_implemented = Not Implemented!!!
+
+# Packed Ints Command
+packed_ints_command = pack
+packed_ints_invalid_argument_length = You need to specify %s or %s and then the integer or the bytes formatted as 95:9a:ef:3a!!!
+packed_ints_bytes_argument = bytes
+packed_ints_int_argument = int
+packed_ints_string_invalid_length = Wrong length for the packed int bytes. Needs to be formatted as 95:9a:ef:3a!!!
+packed_ints_string_invalid_format = The packed int bytes need to be formatted as 95:9a:ef:3a!!!
+packed_ints_string = Unpacked Int: %s
+packed_ints_invalid_hex = Hex Number Invalid!!!
 
 # Help Description Commands
 gamecode_command_help = Convert Game Code (Room Code) to Bytes or String
@@ -42,6 +67,7 @@ region_file_generator_command_help = Generates Region File in Current Working Di
 help_command_help = Displays This Output
 ssh_command_help = Test sshd server!!!
 plugin_command_help = Plugin Info!!!
+packed_ints_command_help = Test packing and unpacking ints!!!
 
 # Server Startup/Shutdown
 server_name = Crewmate
@@ -56,13 +82,14 @@ log_datetime_format_12_hour = [${month}/${day}/${year} ${hour}:${minute}:${secon
 log_datetime_format_24_hour = [${month}/${day}/${year} ${hour}:${minute}:${second}:${nanosecond} ${timezone}] 
 log_datetime_format_12_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second} ${meridiem}] 
 log_datetime_format_24_hour_simple = [${month}/${day}/${year} ${hour}:${minute}:${second}]
-
-# Meridiem
 log_datetime_pre_meridiem = AM
 log_datetime_post_meridiem = PM
 
 # Exceptions
+# Socket Exceptions
 failed_socket_bind = Failed To Bind To Socket!!!
+
+# GameCode Exceptions
 gamecode_null_exception = Check to make sure your assigned your game code variable before passing it to me!!!
 gamecode_invalid_length_exception = Game Code Bytes Needs To Be 4 Bytes Long!!!
 gamecode_invalid_code_exception = Invalid Game Code!!!
@@ -71,8 +98,12 @@ gamecode_wrong_length_v2 = V2 Game Codes Need To Be 6 Letters Long!!!
 gamecode_invalid_bytes_exception = Malformed Game Code Bytes Were Received!!!
 gamecode_server_side_error_exception = Server side error with reading game code!!!
 gamecode_exception = Game Code Exception: 
+
+# Server Side Exception
 search_unknown_host = Server Side Exception While Searching For Games!!!
 server_side_exception = Server Side Exception!!!
+
+# Invalid Packets
 reliable_packet_invalid_size = Reliable Packet Invalid Size
 reliable_packet_unknown_type = Unknown Reliable Packet Type!!! Unhandled Custom Client? Wrong Version?
 search_request_invalid_size = Search Request Packet Invalid Size
@@ -115,7 +146,7 @@ adding_player = Adding Player: %s
 added_player = Added Player: %s
 removed_player = Removed Player: %s
 
-# Plugins
+# Registering Plugins
 registering_plugin = Plugin %s found; Registering plugin!
 registering_plugin_fail = Plugin [%s] could not be loaded!
 registering_plugin_fail_wrong_java = Plugin [%s] could not be loaded due to the plugin being compiled for a newer version of Java than what is being run!
