Added Some Sanitization Checks

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -57,6 +57,7 @@ packed_ints_string_invalid_length = Wrong length for the packed int bytes. Needs
 packed_ints_string_invalid_format = The packed int bytes need to be formatted as 95:9a:ef:3a!!!
 packed_ints_string = Unpacked Int: %s
 packed_ints_invalid_hex = Hex Number Invalid!!!
+packed_ints_invalid_int = Int Invalid!!!
 
 # Help Description Commands
 gamecode_command_help = Convert Game Code (Room Code) to Bytes or String
@@ -90,7 +91,7 @@ log_datetime_post_meridiem = PM
 failed_socket_bind = Failed To Bind To Socket!!!
 
 # GameCode Exceptions
-gamecode_null_exception = Check to make sure your assigned your game code variable before passing it to me!!!
+gamecode_null_exception = Check to make sure you assigned your game code variable before passing it to me!!!
 gamecode_invalid_length_exception = Game Code Bytes Needs To Be 4 Bytes Long!!!
 gamecode_invalid_code_exception = Invalid Game Code!!!
 gamecode_wrong_length = Game Codes Need To Be 4 Or 6 Letters Long!!!
@@ -102,6 +103,7 @@ gamecode_exception = Game Code Exception:
 # Server Side Exception
 search_unknown_host = Server Side Exception While Searching For Games!!!
 server_side_exception = Server Side Exception!!!
+invalid_bytes_null_exception = Check to make sure you assigned your bytes variable before passing it to me!!!
 
 # Invalid Packets
 reliable_packet_invalid_size = Reliable Packet Invalid Size
