--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -106,8 +106,8 @@ server_side_exception = Server Side Exception!!!
 invalid_bytes_null_exception = Check to make sure you assigned your bytes variable before passing it to me!!!
 
 # Invalid Packets
-reliable_packet_invalid_size = Reliable Packet Invalid Size
-reliable_packet_unknown_type = Unknown Reliable Packet Type!!! Unhandled Custom Client? Wrong Version?
+game_packet_invalid_size = Game Packet Invalid Size
+game_packet_unknown_type = Unknown Game Packet Type!!! Unhandled Custom Client? Wrong Version?
 search_request_invalid_size = Search Request Packet Invalid Size
 rpc_packet_unknown_type = Unknown RPC Type!!! Unhandled Custom Client? Wrong Version?
 chat_packet_invalid_size = Chat Packet Invalid Size
@@ -126,7 +126,7 @@ plugins_directory_failed_creation = Failed to create plugins directory "%s"!!!
 mods_directory_failed_creation = Failed to create mods directory "%s"!!!
 missing_display_name_handshake = Missing Display Name!!!
 display_name_too_long = Can only use up to 10 letters for your display name. :(
-payload_length_too_long = Gotta start somewhere with your custom client. Eh. Well, your payload length is too long.
+game_packet_payload_length_too_long = Gotta start somewhere with your custom client. Eh. Well, your payload length is too long.
 invalid_number_of_bytes_exact = The byte[] needs to contain only %d bytes.
 
 # Server Logging
