Added All Possible Languages For Bitfield

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -177,6 +177,29 @@ polish = Polish
 portuguese = Portuguese
 russian = Russian
 spanish = Spanish
+language_ten = Language 10
+language_eleven = Language 11
+language_twelve = Language 12
+language_thirteen = Language 13
+language_fourteen = Language 14
+language_fifteen = Language 15
+language_sixteen = Language 16
+language_seventeen = Language 17
+language_eighteen = Language 18
+language_nineteen = Language 19
+language_twenty = Language 20
+language_twenty_one = Language 21
+language_twenty_two = Language 22
+language_twenty_three = Language 23
+language_twenty_four = Language 24
+language_twenty_five = Language 25
+language_twenty_six = Language 26
+language_twenty_seven = Language 27
+language_twenty_eight = Language 28
+language_twenty_nine = Language 29
+language_thirty = Language 30
+language_thirty_one = Language 31
+language_thirty_two = Language 32
 
 # Disconnect Reasons
 none = None
