Moved Map Bitfield to Enum

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -161,10 +161,11 @@ skeld = The Skeld
 mira_hq = Mira-HQ
 polus = Polus
 stickmin = Stickmin (Unofficial Name)
-map_five = Map Five (Doesn't Exist At Time of This Translation Writing)
-map_six = Map Six (Doesn't Exist At Time of This Translation Writing)
-map_seven = Map Seven (Doesn't Exist At Time of This Translation Writing)
-map_eight = Map Eight (Doesn't Exist At Time of This Translation Writing)
+map_five = Map Five
+map_six = Map Six
+map_seven = Map Seven
+map_eight = Map Eight
+map_nine = Map Nine
 unknown = Unknown
 
 # Language
