--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -201,6 +201,7 @@ language_twenty_nine = Language 29
 language_thirty = Language 30
 language_thirty_one = Language 31
 language_thirty_two = Language 32
+unspecified = Unspecified
 
 # Disconnect Reasons
 none = None
