Language Bitfield Array

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -139,6 +139,7 @@ maps_logged = Maps: %s
 imposter_count_logged = Imposters: %s
 imposter_count_any_logged = Any
 language_logged = Language: %s
+languages_logged = Languages: %s
 gamecode_integer_form_logged = Game Code (Integer Form): %s
 list_delimiter_logged = , 
 owned_maps = Owned Maps: %s
