Started Fuzzing The Server

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -104,6 +104,7 @@ gamecode_exception = Game Code Exception:
 search_unknown_host = Server Side Exception While Searching For Games!!!
 server_side_exception = Server Side Exception!!!
 invalid_bytes_null_exception = Check to make sure you assigned your bytes variable before passing it to me!!!
+uncaught_server_side_exception = Uncaught Server Side Exception: %s
 
 # Invalid Packets
 game_packet_invalid_size = Game Packet Invalid Size
@@ -128,6 +129,8 @@ missing_display_name_handshake = Missing Display Name!!!
 display_name_too_long = Can only use up to 10 letters for your display name. :(
 game_packet_payload_length_too_long = Gotta start somewhere with your custom client. Eh. Well, your payload length is too long.
 invalid_number_of_bytes_exact = The byte[] needs to contain only %d bytes.
+fragment_packet_not_supported = Fragment Packet Not Supported!!!
+invalid_name_close_connection = Invalid Name!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -166,6 +169,7 @@ map_five = Map Five
 map_six = Map Six
 map_seven = Map Seven
 map_eight = Map Eight
+unknown_map = Unknown Map
 unknown = Unknown
 
 # Language
