Fixed More Fuzzing Detected Bugs and Manual Review Detected Bugs

--- a/src/main/resources/translations/Main.properties
+++ b/src/main/resources/translations/Main.properties
@@ -131,6 +131,8 @@ game_packet_payload_length_too_long = Gotta start somewhere with your custom cli
 invalid_number_of_bytes_exact = The byte[] needs to contain only %d bytes.
 fragment_packet_not_supported = Fragment Packet Not Supported!!!
 invalid_name_close_connection = Invalid Name!!!
+invalid_max_players = Max Player Count Can Only Be Between %d and %d, not %d!!!
+invalid_imposter_count = Imposter Count Can Only Be Between %d and %d, not %d!!!
 
 # Server Logging
 client_version_logged = Client Version: ${raw} - ${month}/${day}/${year} Revision: ${revision}
@@ -169,6 +171,7 @@ map_five = Map Five
 map_six = Map Six
 map_seven = Map Seven
 map_eight = Map Eight
+unspecified_map = Unspecified Map
 unknown_map = Unknown Map
 unknown = Unknown
 
@@ -205,6 +208,7 @@ language_twenty_nine = Language 29
 language_thirty = Language 30
 language_thirty_one = Language 31
 language_thirty_two = Language 32
+unspecified_language = Unspecified Language
 unspecified = Unspecified
 
 # Disconnect Reasons
